WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79931
writable attribute not set correctly when redefining an accessor to a data descriptor
https://bugs.webkit.org/show_bug.cgi?id=79931
Summary
writable attribute not set correctly when redefining an accessor to a data de...
Gavin Barraclough
Reported
2012-02-29 11:47:22 PST
see summary :-)
Attachments
Fix
(7.70 KB, patch)
2012-02-29 11:50 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-02-29 11:50:20 PST
Created
attachment 129485
[details]
Fix
Gavin Barraclough
Comment 2
2012-02-29 12:05:52 PST
Fixed in
r109240
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug