Writable attribute not set correctly when redefining an accessor to a data descriptor https://bugs.webkit.org/show_bug.cgi?id=79931

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* runtime/JSObject.cpp:
(JSC::JSObject::defineOwnProperty):
    - use attributesOverridingCurrent instead of attributesWithOverride.
* runtime/PropertyDescriptor.cpp:
* runtime/PropertyDescriptor.h:
    - remove attributesWithOverride - attributesOverridingCurrent does the same thing.

LayoutTests:

* fast/js/Object-defineProperty-expected.txt:
* fast/js/script-tests/Object-defineProperty.js:
    - Added tests.



Canonical link: https://commits.webkit.org/96996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109240 268f45cc-cd09-0410-ab3c-d52691b4dbfc